analyzed rtcc requests for violent crimes

--- a/notebooks_epr/rtcc_police_reports_hours.ipynb
+++ b/notebooks_epr/rtcc_police_reports_hours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_20224\\153542535.py:2: DtypeWarning: Columns (14,20,24,25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_22320\\153542535.py:2: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n"
      ]
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,55 +69,439 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_number</th>\n",
+       "      <th>district</th>\n",
+       "      <th>location</th>\n",
+       "      <th>disposition</th>\n",
+       "      <th>signal_type</th>\n",
+       "      <th>signal_description</th>\n",
+       "      <th>occurred_date_time</th>\n",
+       "      <th>charge_code</th>\n",
+       "      <th>charge_description</th>\n",
+       "      <th>offender_race</th>\n",
+       "      <th>...</th>\n",
+       "      <th>victim_fatal_status</th>\n",
+       "      <th>hate_crime</th>\n",
+       "      <th>report_type</th>\n",
+       "      <th>year</th>\n",
+       "      <th>offenderid</th>\n",
+       "      <th>offenderstatus</th>\n",
+       "      <th>persontype</th>\n",
+       "      <th>Signal Code</th>\n",
+       "      <th>rtcc_requested</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>k1775022</td>\n",
+       "      <td>8</td>\n",
+       "      <td>002XX Bourbon St</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>21</td>\n",
+       "      <td>MISCELLANEOUS INCIDENT</td>\n",
+       "      <td>2018-01-26 02:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Incident Report</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>INTERVIEW</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>k1592122</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Iberville St &amp; Clinton St</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>103</td>\n",
+       "      <td>DISTURBANCE</td>\n",
+       "      <td>2018-03-28 04:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Supplemental Report</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VICTIM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>k1495922</td>\n",
+       "      <td>3</td>\n",
+       "      <td>063XX Peoples Av</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>30S</td>\n",
+       "      <td>HOMICIDE (SHOOTING)</td>\n",
+       "      <td>2018-03-29 01:47:00</td>\n",
+       "      <td>14 30.1</td>\n",
+       "      <td>SECOND DEGREE MURDER</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Incident Report</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>789346.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VICTIM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>k1491622</td>\n",
+       "      <td>8</td>\n",
+       "      <td>002XX Loyola Av</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>43</td>\n",
+       "      <td>SIMPLE RAPE</td>\n",
+       "      <td>2018-04-01 04:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Incident Report</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VICTIM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>k1351722</td>\n",
+       "      <td>3</td>\n",
+       "      <td>039XX Clematis St</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>55</td>\n",
+       "      <td>AGGRAVATED CRIMINAL DAMAGE</td>\n",
+       "      <td>2018-04-02 01:00:00</td>\n",
+       "      <td>14 55</td>\n",
+       "      <td>AGG. CRIMINAL DAMAGE</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Incident Report</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>789201.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VICTIM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26721</th>\n",
+       "      <td>d0076618</td>\n",
+       "      <td>3</td>\n",
+       "      <td>52XX Bancroft Dr</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>67A</td>\n",
+       "      <td>AUTO THEFT</td>\n",
+       "      <td>2022-11-15 05:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Supplemental Report</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>67A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26723</th>\n",
+       "      <td>c3547918</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3XX Bourbon St</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>67P</td>\n",
+       "      <td>PICKPOCKET</td>\n",
+       "      <td>2022-11-16 00:05:00</td>\n",
+       "      <td>14 67.3</td>\n",
+       "      <td>UNAUTHORIZED USE OF ACCESS CARD</td>\n",
+       "      <td>BLACK</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Supplemental Report</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>67P</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26728</th>\n",
+       "      <td>c3607418</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3XX Royal St</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>43</td>\n",
+       "      <td>SIMPLE RAPE</td>\n",
+       "      <td>2022-11-16 22:13:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Incident Report</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26729</th>\n",
+       "      <td>d0539518</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4XX Bourbon St</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>67P</td>\n",
+       "      <td>PICKPOCKET</td>\n",
+       "      <td>2022-11-16 22:19:00</td>\n",
+       "      <td>14 67</td>\n",
+       "      <td>THEFT</td>\n",
+       "      <td>BLACK</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Non-fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Incident Report</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>67p</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26730</th>\n",
+       "      <td>b2060718</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19XX Saint Ann St</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>30S</td>\n",
+       "      <td>HOMICIDE (SHOOTING)</td>\n",
+       "      <td>2022-11-18 02:10:00</td>\n",
+       "      <td>14 30</td>\n",
+       "      <td>FIRST DEGREE MURDER</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Fatal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Incident Report</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4279 rows × 28 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1     528\n",
-       "23    487\n",
-       "2     474\n",
-       "0     461\n",
-       "21    454\n",
-       "20    448\n",
-       "19    431\n",
-       "3     425\n",
-       "17    423\n",
-       "18    412\n",
-       "22    403\n",
-       "16    381\n",
-       "15    370\n",
-       "11    336\n",
-       "14    330\n",
-       "4     328\n",
-       "12    303\n",
-       "10    286\n",
-       "13    259\n",
-       "9     208\n",
-       "5     202\n",
-       "8     192\n",
-       "6     185\n",
-       "7     162\n",
-       "Name: hour, dtype: int64"
+       "      item_number  district                   location disposition  \\\n",
+       "2        k1775022         8           002XX Bourbon St        OPEN   \n",
+       "20       k1592122         8  Iberville St & Clinton St        OPEN   \n",
+       "24       k1495922         3           063XX Peoples Av        OPEN   \n",
+       "28       k1491622         8            002XX Loyola Av        OPEN   \n",
+       "34       k1351722         3          039XX Clematis St        OPEN   \n",
+       "...           ...       ...                        ...         ...   \n",
+       "26721    d0076618         3           52XX Bancroft Dr        OPEN   \n",
+       "26723    c3547918         8             3XX Bourbon St        OPEN   \n",
+       "26728    c3607418         8               3XX Royal St        OPEN   \n",
+       "26729    d0539518         8             4XX Bourbon St        OPEN   \n",
+       "26730    b2060718         1          19XX Saint Ann St        OPEN   \n",
+       "\n",
+       "      signal_type          signal_description  occurred_date_time charge_code  \\\n",
+       "2              21      MISCELLANEOUS INCIDENT 2018-01-26 02:00:00         NaN   \n",
+       "20            103                 DISTURBANCE 2018-03-28 04:00:00         NaN   \n",
+       "24            30S         HOMICIDE (SHOOTING) 2018-03-29 01:47:00     14 30.1   \n",
+       "28             43                 SIMPLE RAPE 2018-04-01 04:30:00         NaN   \n",
+       "34             55  AGGRAVATED CRIMINAL DAMAGE 2018-04-02 01:00:00       14 55   \n",
+       "...           ...                         ...                 ...         ...   \n",
+       "26721         67A                  AUTO THEFT 2022-11-15 05:30:00         NaN   \n",
+       "26723         67P                  PICKPOCKET 2022-11-16 00:05:00     14 67.3   \n",
+       "26728          43                 SIMPLE RAPE 2022-11-16 22:13:00         NaN   \n",
+       "26729         67P                  PICKPOCKET 2022-11-16 22:19:00       14 67   \n",
+       "26730         30S         HOMICIDE (SHOOTING) 2022-11-18 02:10:00       14 30   \n",
+       "\n",
+       "                    charge_description offender_race  ... victim_fatal_status  \\\n",
+       "2                                  NaN           NaN  ...           Non-fatal   \n",
+       "20                                 NaN           NaN  ...           Non-fatal   \n",
+       "24                SECOND DEGREE MURDER       UNKNOWN  ...               Fatal   \n",
+       "28                                 NaN           NaN  ...           Non-fatal   \n",
+       "34                AGG. CRIMINAL DAMAGE       UNKNOWN  ...           Non-fatal   \n",
+       "...                                ...           ...  ...                 ...   \n",
+       "26721                              NaN           NaN  ...           Non-fatal   \n",
+       "26723  UNAUTHORIZED USE OF ACCESS CARD         BLACK  ...           Non-fatal   \n",
+       "26728                              NaN           NaN  ...           Non-fatal   \n",
+       "26729                            THEFT         BLACK  ...           Non-fatal   \n",
+       "26730              FIRST DEGREE MURDER           NaN  ...               Fatal   \n",
+       "\n",
+       "       hate_crime          report_type  year offenderid offenderstatus  \\\n",
+       "2             NaN      Incident Report  2022        NaN            NaN   \n",
+       "20            NaN  Supplemental Report  2022        NaN            NaN   \n",
+       "24            NaN      Incident Report  2022   789346.0            NaN   \n",
+       "28            NaN      Incident Report  2022        NaN            NaN   \n",
+       "34            NaN      Incident Report  2022   789201.0            NaN   \n",
+       "...           ...                  ...   ...        ...            ...   \n",
+       "26721         NaN  Supplemental Report  2018        NaN            NaN   \n",
+       "26723         NaN  Supplemental Report  2018        NaN            NaN   \n",
+       "26728         NaN      Incident Report  2018        NaN            NaN   \n",
+       "26729         NaN      Incident Report  2018        NaN            NaN   \n",
+       "26730         NaN      Incident Report  2018        NaN            NaN   \n",
+       "\n",
+       "       persontype  Signal Code rtcc_requested hour  \n",
+       "2       INTERVIEW          NaN              1    2  \n",
+       "20         VICTIM          NaN              1    4  \n",
+       "24         VICTIM          NaN              1    1  \n",
+       "28         VICTIM          NaN              1    4  \n",
+       "34         VICTIM          NaN              1    1  \n",
+       "...           ...          ...            ...  ...  \n",
+       "26721         NaN          67A              1    5  \n",
+       "26723         NaN          67P              1    0  \n",
+       "26728         NaN           43              1   22  \n",
+       "26729         NaN          67p              1   22  \n",
+       "26730         NaN          30S              1    2  \n",
+       "\n",
+       "[4279 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.hour.value_counts()"
+    "df.hour.value_counts()\n",
+    "\n",
+    "df = df[df.hour.astype(str).isin([\"20\", \"21\", \"22\", \"23\", \"0\", \"1\", \"2\", \"3\", \"4\", \"5\"])]\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8    1118\n",
+       "7     583\n",
+       "1     556\n",
+       "5     431\n",
+       "2     420\n",
+       "6     412\n",
+       "4     401\n",
+       "3     358\n",
+       "Name: district, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.district.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"../data/real_time_crime_center/requests_by_hour_of_the_day.csv\")"
+    "# df.to_csv(\"../data/real_time_crime_center/requests_by_hour_of_the_day.csv\")"
    ]
   }
  ],
@@ -137,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
