added code for a poisson regression test

--- a/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
+++ b/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from lib import standardize_item_numbers\n",
-    "from scipy.stats import chi2_contingency"
+    "from scipy.stats import chi2_contingency\n",
+    "import statsmodels.api as sm\n",
+    "import numpy as np\n",
+    "import statsmodels.stats.multitest as smm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_40512\\153542535.py:2: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_39876\\153542535.py:2: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n"
      ]
     }
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,23 +117,22 @@
     "charges = pd.get_dummies(df[\"charge_description\"])\n",
     "df = pd.concat([df, charges], axis=1)\n",
     "\n",
-    "\n",
     "races = pd.get_dummies(df[\"offender_race\"])\n",
     "df = pd.concat([df, races], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=[\"charge_description\", \"white\", \"amer. ind.\", \"hispanic\", \"unknown\", \"white\", \"asian\", \"offender_race\"])"
+    "df = df.drop(columns=[\"charge_description\", \"amer. ind.\", \"hispanic\", \"asian\", \"offender_race\",])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -154,115 +156,244 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>charge_description</th>\n",
-       "      <th>p-value</th>\n",
-       "      <th>race</th>\n",
+       "      <th>AGG. BATTERY</th>\n",
+       "      <th>AGG. CRIMINAL DAMAGE</th>\n",
+       "      <th>AGGRAVATED ASSAULT WITH A FIREARM</th>\n",
+       "      <th>ARMED ROBBERY</th>\n",
+       "      <th>SIMPLE BURGLARY</th>\n",
+       "      <th>SIMPLE CRIMINAL DAMAGE TO PROPERTY</th>\n",
+       "      <th>SIMPLE ROBBERY</th>\n",
+       "      <th>THEFT</th>\n",
+       "      <th>THEFT OF A MOTOR VEHICLE</th>\n",
+       "      <th>USE OF FIREARM IN ROBBERY</th>\n",
+       "      <th>black</th>\n",
+       "      <th>unknown</th>\n",
+       "      <th>white</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AGG. BATTERY</td>\n",
+       "      <th>black</th>\n",
        "      <td>1.830304e-13</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AGG. CRIMINAL DAMAGE</td>\n",
        "      <td>7.589706e-25</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AGGRAVATED ASSAULT WITH A FIREARM</td>\n",
        "      <td>1.709513e-09</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ARMED ROBBERY</td>\n",
        "      <td>1.177811e-56</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SIMPLE BURGLARY</td>\n",
        "      <td>1.816258e-14</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>SIMPLE CRIMINAL DAMAGE TO PROPERTY</td>\n",
        "      <td>4.304823e-33</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>SIMPLE ROBBERY</td>\n",
        "      <td>2.594596e-24</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>THEFT</td>\n",
-       "      <td>9.234163e-03</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>THEFT OF A MOTOR VEHICLE</td>\n",
+       "      <td>0.009234</td>\n",
        "      <td>4.946784e-10</td>\n",
-       "      <td>black</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>USE OF FIREARM IN ROBBERY</td>\n",
        "      <td>1.276295e-39</td>\n",
-       "      <td>black</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2.855272e-132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>black</td>\n",
+       "      <th>white</th>\n",
+       "      <td>4.231211e-04</td>\n",
+       "      <td>4.905849e-04</td>\n",
+       "      <td>3.286511e-02</td>\n",
+       "      <td>3.283886e-02</td>\n",
+       "      <td>2.076675e-01</td>\n",
+       "      <td>4.380683e-01</td>\n",
+       "      <td>2.133689e-01</td>\n",
+       "      <td>0.000327</td>\n",
+       "      <td>3.615904e-01</td>\n",
+       "      <td>1.520485e-04</td>\n",
+       "      <td>2.855272e-132</td>\n",
+       "      <td>6.804999e-17</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>black</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unknown</th>\n",
+       "      <td>4.341797e-11</td>\n",
+       "      <td>1.184539e-34</td>\n",
+       "      <td>5.873861e-13</td>\n",
+       "      <td>6.568339e-54</td>\n",
+       "      <td>1.093990e-17</td>\n",
+       "      <td>4.607720e-34</td>\n",
+       "      <td>1.698802e-29</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>7.117821e-12</td>\n",
+       "      <td>4.350754e-34</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>6.804999e-17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    charge_description       p-value   race\n",
-       "0                         AGG. BATTERY  1.830304e-13  black\n",
-       "1                 AGG. CRIMINAL DAMAGE  7.589706e-25  black\n",
-       "2    AGGRAVATED ASSAULT WITH A FIREARM  1.709513e-09  black\n",
-       "3                        ARMED ROBBERY  1.177811e-56  black\n",
-       "4                      SIMPLE BURGLARY  1.816258e-14  black\n",
-       "5   SIMPLE CRIMINAL DAMAGE TO PROPERTY  4.304823e-33  black\n",
-       "6                       SIMPLE ROBBERY  2.594596e-24  black\n",
-       "7                                THEFT  9.234163e-03  black\n",
-       "8             THEFT OF A MOTOR VEHICLE  4.946784e-10  black\n",
-       "9            USE OF FIREARM IN ROBBERY  1.276295e-39  black\n",
-       "10                               black  0.000000e+00  black"
+       "         AGG. BATTERY  AGG. CRIMINAL DAMAGE   \n",
+       "black    1.830304e-13          7.589706e-25  \\\n",
+       "white    4.231211e-04          4.905849e-04   \n",
+       "unknown  4.341797e-11          1.184539e-34   \n",
+       "\n",
+       "         AGGRAVATED ASSAULT WITH A FIREARM  ARMED ROBBERY  SIMPLE BURGLARY   \n",
+       "black                         1.709513e-09   1.177811e-56     1.816258e-14  \\\n",
+       "white                         3.286511e-02   3.283886e-02     2.076675e-01   \n",
+       "unknown                       5.873861e-13   6.568339e-54     1.093990e-17   \n",
+       "\n",
+       "         SIMPLE CRIMINAL DAMAGE TO PROPERTY  SIMPLE ROBBERY     THEFT   \n",
+       "black                          4.304823e-33    2.594596e-24  0.009234  \\\n",
+       "white                          4.380683e-01    2.133689e-01  0.000327   \n",
+       "unknown                        4.607720e-34    1.698802e-29  0.000001   \n",
+       "\n",
+       "         THEFT OF A MOTOR VEHICLE  USE OF FIREARM IN ROBBERY          black   \n",
+       "black                4.946784e-10               1.276295e-39   0.000000e+00  \\\n",
+       "white                3.615904e-01               1.520485e-04  2.855272e-132   \n",
+       "unknown              7.117821e-12               4.350754e-34   0.000000e+00   \n",
+       "\n",
+       "              unknown          white  \n",
+       "black    0.000000e+00  2.855272e-132  \n",
+       "white    6.804999e-17   0.000000e+00  \n",
+       "unknown  0.000000e+00   6.804999e-17  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_black = {}\n",
-    "for col in df:\n",
-    "    if pd.api.types.is_numeric_dtype(df[col]):\n",
-    "        CrosstabResult=pd.crosstab(index=df.black, columns=df[col])\n",
-    "        ChiSqResult = chi2_contingency(CrosstabResult)\n",
-    "        results_black[col] = ChiSqResult[1]\n",
+    "races = ['black', 'white', 'unknown']\n",
+    "results_c2 = {}\n",
+    "for race in races:\n",
+    "    results_c2[race] = {}\n",
+    "    for col in df:\n",
+    "        if pd.api.types.is_numeric_dtype(df[col]):\n",
+    "            CrosstabResult = pd.crosstab(index=df[race], columns=df[col])\n",
+    "            ChiSqResult = chi2_contingency(CrosstabResult)\n",
+    "            results_c2[race][col] = ChiSqResult[1]\n",
+    "results = pd.DataFrame.from_dict(results_c2, orient=\"index\")\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p_value</th>\n",
+       "      <th>p_adjusted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AGG. BATTERY</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AGG. CRIMINAL DAMAGE</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AGGRAVATED ASSAULT WITH A FIREARM</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ARMED ROBBERY</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SIMPLE BURGLARY</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SIMPLE CRIMINAL DAMAGE TO PROPERTY</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SIMPLE ROBBERY</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>THEFT</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>THEFT OF A MOTOR VEHICLE</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USE OF FIREARM IN ROBBERY</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    p_value  p_adjusted\n",
+       "AGG. BATTERY                            0.0         0.0\n",
+       "AGG. CRIMINAL DAMAGE                    0.0         0.0\n",
+       "AGGRAVATED ASSAULT WITH A FIREARM       0.0         0.0\n",
+       "ARMED ROBBERY                           0.0         0.0\n",
+       "SIMPLE BURGLARY                         0.0         0.0\n",
+       "SIMPLE CRIMINAL DAMAGE TO PROPERTY      0.0         0.0\n",
+       "SIMPLE ROBBERY                          0.0         0.0\n",
+       "THEFT                                   0.0         0.0\n",
+       "THEFT OF A MOTOR VEHICLE                0.0         0.0\n",
+       "USE OF FIREARM IN ROBBERY               0.0         0.0"
+      ]
+     },
+     "execution_count": 442,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_data_black = df.groupby(['black']).sum()\n",
+    "count_data_black = count_data_black.reset_index()\n",
     "\n",
-    "results_black = pd.DataFrame.from_dict(results_black, orient=\"index\")\n",
-    "results_black[\"race\"] = \"black\"\n",
-    "results_black = results_black.reset_index()\n",
-    "results_black = results_black.rename(columns={results_black.columns[0]: \"charge_description\", results_black.columns[1]: \"p-value\"})\n",
-    "results_black"
+    "results_dict = {}\n",
+    "\n",
+    "for col in count_data_black.columns[:]:\n",
+    "    model = sm.GLM(count_data_black[col], count_data_black[['black']], family=sm.families.Poisson())\n",
+    "    result = model.fit()\n",
+    "    results_dict[col] = result.pvalues[0]\n",
+    "    \n",
+    "\n",
+    "results_df = pd.DataFrame.from_dict(results_dict, orient='index', columns=['p_value'])\n",
+    "results_df\n",
+    "# perform multiple comparison correction using FDR method\n",
+    "results_df['p_adjusted'] = smm.multipletests(results_df['p_value'], method='fdr_bh')[1]\n",
+    "\n",
+    "# filter for statistically significant results\n",
+    "significant_results_df = results_df[results_df['p_adjusted'] < 0.05]\n",
+    "significant_results_df"
    ]
   }
  ],
