--- a/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
+++ b/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_39876\\153542535.py:2: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_12580\\153542535.py:2: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n"
      ]
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[~((df.charge_description.fillna(\"\") == \"\"))]\n",
+    "df.loc[:, \"offender_race\"] = df.offender_race.fillna(\"\").str.replace(r\"^$\", \"black\", regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,302 +108,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[~((df.charge_description.fillna(\"\") == \"\"))]\n",
-    "df.loc[:, \"offender_race\"] = df.offender_race.fillna(\"\").str.replace(r\"^$\", \"black\", regex=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 438,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[[\"offender_race\", \"charge_description\"]]\n",
-    "\n",
-    "charges = pd.get_dummies(df[\"charge_description\"])\n",
-    "df = pd.concat([df, charges], axis=1)\n",
-    "\n",
-    "races = pd.get_dummies(df[\"offender_race\"])\n",
-    "df = pd.concat([df, races], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 439,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop(columns=[\"charge_description\", \"amer. ind.\", \"hispanic\", \"asian\", \"offender_race\",])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AGG. BATTERY</th>\n",
-       "      <th>AGG. CRIMINAL DAMAGE</th>\n",
-       "      <th>AGGRAVATED ASSAULT WITH A FIREARM</th>\n",
-       "      <th>ARMED ROBBERY</th>\n",
-       "      <th>SIMPLE BURGLARY</th>\n",
-       "      <th>SIMPLE CRIMINAL DAMAGE TO PROPERTY</th>\n",
-       "      <th>SIMPLE ROBBERY</th>\n",
-       "      <th>THEFT</th>\n",
-       "      <th>THEFT OF A MOTOR VEHICLE</th>\n",
-       "      <th>USE OF FIREARM IN ROBBERY</th>\n",
-       "      <th>black</th>\n",
-       "      <th>unknown</th>\n",
-       "      <th>white</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>black</th>\n",
-       "      <td>1.830304e-13</td>\n",
-       "      <td>7.589706e-25</td>\n",
-       "      <td>1.709513e-09</td>\n",
-       "      <td>1.177811e-56</td>\n",
-       "      <td>1.816258e-14</td>\n",
-       "      <td>4.304823e-33</td>\n",
-       "      <td>2.594596e-24</td>\n",
-       "      <td>0.009234</td>\n",
-       "      <td>4.946784e-10</td>\n",
-       "      <td>1.276295e-39</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>2.855272e-132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>white</th>\n",
-       "      <td>4.231211e-04</td>\n",
-       "      <td>4.905849e-04</td>\n",
-       "      <td>3.286511e-02</td>\n",
-       "      <td>3.283886e-02</td>\n",
-       "      <td>2.076675e-01</td>\n",
-       "      <td>4.380683e-01</td>\n",
-       "      <td>2.133689e-01</td>\n",
-       "      <td>0.000327</td>\n",
-       "      <td>3.615904e-01</td>\n",
-       "      <td>1.520485e-04</td>\n",
-       "      <td>2.855272e-132</td>\n",
-       "      <td>6.804999e-17</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unknown</th>\n",
-       "      <td>4.341797e-11</td>\n",
-       "      <td>1.184539e-34</td>\n",
-       "      <td>5.873861e-13</td>\n",
-       "      <td>6.568339e-54</td>\n",
-       "      <td>1.093990e-17</td>\n",
-       "      <td>4.607720e-34</td>\n",
-       "      <td>1.698802e-29</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>7.117821e-12</td>\n",
-       "      <td>4.350754e-34</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>6.804999e-17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         AGG. BATTERY  AGG. CRIMINAL DAMAGE   \n",
-       "black    1.830304e-13          7.589706e-25  \\\n",
-       "white    4.231211e-04          4.905849e-04   \n",
-       "unknown  4.341797e-11          1.184539e-34   \n",
-       "\n",
-       "         AGGRAVATED ASSAULT WITH A FIREARM  ARMED ROBBERY  SIMPLE BURGLARY   \n",
-       "black                         1.709513e-09   1.177811e-56     1.816258e-14  \\\n",
-       "white                         3.286511e-02   3.283886e-02     2.076675e-01   \n",
-       "unknown                       5.873861e-13   6.568339e-54     1.093990e-17   \n",
-       "\n",
-       "         SIMPLE CRIMINAL DAMAGE TO PROPERTY  SIMPLE ROBBERY     THEFT   \n",
-       "black                          4.304823e-33    2.594596e-24  0.009234  \\\n",
-       "white                          4.380683e-01    2.133689e-01  0.000327   \n",
-       "unknown                        4.607720e-34    1.698802e-29  0.000001   \n",
-       "\n",
-       "         THEFT OF A MOTOR VEHICLE  USE OF FIREARM IN ROBBERY          black   \n",
-       "black                4.946784e-10               1.276295e-39   0.000000e+00  \\\n",
-       "white                3.615904e-01               1.520485e-04  2.855272e-132   \n",
-       "unknown              7.117821e-12               4.350754e-34   0.000000e+00   \n",
-       "\n",
-       "              unknown          white  \n",
-       "black    0.000000e+00  2.855272e-132  \n",
-       "white    6.804999e-17   0.000000e+00  \n",
-       "unknown  0.000000e+00   6.804999e-17  "
+       "Index(['offender_race', 'AGG. BATTERY', 'AGG. CRIMINAL DAMAGE',\n",
+       "       'AGGRAVATED ASSAULT WITH A FIREARM', 'ARMED ROBBERY', 'SIMPLE BURGLARY',\n",
+       "       'SIMPLE CRIMINAL DAMAGE TO PROPERTY', 'SIMPLE ROBBERY', 'THEFT',\n",
+       "       'THEFT OF A MOTOR VEHICLE', 'USE OF FIREARM IN ROBBERY'],\n",
+       "      dtype='object', name='charge_description')"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "races = ['black', 'white', 'unknown']\n",
-    "results_c2 = {}\n",
-    "for race in races:\n",
-    "    results_c2[race] = {}\n",
-    "    for col in df:\n",
-    "        if pd.api.types.is_numeric_dtype(df[col]):\n",
-    "            CrosstabResult = pd.crosstab(index=df[race], columns=df[col])\n",
-    "            ChiSqResult = chi2_contingency(CrosstabResult)\n",
-    "            results_c2[race][col] = ChiSqResult[1]\n",
-    "results = pd.DataFrame.from_dict(results_c2, orient=\"index\")\n",
-    "results"
+    "counts = df.groupby(\"offender_race\").charge_description.value_counts()\n",
+    "counts = pd.DataFrame(counts)\n",
+    "counts = counts.reset_index()\n",
+    "counts =  counts.pivot(index='offender_race', columns='charge_description', values='count')\n",
+    "counts = counts.reset_index()\n",
+    "counts.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>p_value</th>\n",
-       "      <th>p_adjusted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AGG. BATTERY</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AGG. CRIMINAL DAMAGE</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AGGRAVATED ASSAULT WITH A FIREARM</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ARMED ROBBERY</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SIMPLE BURGLARY</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SIMPLE CRIMINAL DAMAGE TO PROPERTY</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SIMPLE ROBBERY</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>THEFT</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>THEFT OF A MOTOR VEHICLE</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USE OF FIREARM IN ROBBERY</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    p_value  p_adjusted\n",
-       "AGG. BATTERY                            0.0         0.0\n",
-       "AGG. CRIMINAL DAMAGE                    0.0         0.0\n",
-       "AGGRAVATED ASSAULT WITH A FIREARM       0.0         0.0\n",
-       "ARMED ROBBERY                           0.0         0.0\n",
-       "SIMPLE BURGLARY                         0.0         0.0\n",
-       "SIMPLE CRIMINAL DAMAGE TO PROPERTY      0.0         0.0\n",
-       "SIMPLE ROBBERY                          0.0         0.0\n",
-       "THEFT                                   0.0         0.0\n",
-       "THEFT OF A MOTOR VEHICLE                0.0         0.0\n",
-       "USE OF FIREARM IN ROBBERY               0.0         0.0"
-      ]
-     },
-     "execution_count": 442,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value: 1.8328740039475772e-11\n"
+     ]
     }
    ],
    "source": [
-    "count_data_black = df.groupby(['black']).sum()\n",
-    "count_data_black = count_data_black.reset_index()\n",
     "\n",
-    "results_dict = {}\n",
+    "black_counts = counts.loc[counts['offender_race'] == 'black', ['THEFT OF A MOTOR VEHICLE', 'THEFT', 'ARMED ROBBERY',\n",
+    "                                                       'USE OF FIREARM IN ROBBERY', 'AGG. BATTERY', 'SIMPLE BURGLARY',\n",
+    "                                                       'SIMPLE ROBBERY', 'AGGRAVATED ASSAULT WITH A FIREARM',\n",
+    "                                                       'SIMPLE CRIMINAL DAMAGE TO PROPERTY', 'AGG. CRIMINAL DAMAGE']].values\n",
     "\n",
-    "for col in count_data_black.columns[:]:\n",
-    "    model = sm.GLM(count_data_black[col], count_data_black[['black']], family=sm.families.Poisson())\n",
-    "    result = model.fit()\n",
-    "    results_dict[col] = result.pvalues[0]\n",
-    "    \n",
+    "white_counts = counts.loc[counts['offender_race'] == 'white', ['THEFT OF A MOTOR VEHICLE', 'THEFT', 'ARMED ROBBERY',\n",
+    "                                                       'USE OF FIREARM IN ROBBERY', 'AGG. BATTERY', 'SIMPLE BURGLARY',\n",
+    "                                                       'SIMPLE ROBBERY', 'AGGRAVATED ASSAULT WITH A FIREARM',\n",
+    "                                                       'SIMPLE CRIMINAL DAMAGE TO PROPERTY', 'AGG. CRIMINAL DAMAGE']].values\n",
     "\n",
-    "results_df = pd.DataFrame.from_dict(results_dict, orient='index', columns=['p_value'])\n",
-    "results_df\n",
-    "# perform multiple comparison correction using FDR method\n",
-    "results_df['p_adjusted'] = smm.multipletests(results_df['p_value'], method='fdr_bh')[1]\n",
+    "chi2, pval, dof, expected = chi2_contingency([black_counts, white_counts])\n",
+    "print(\"p-value:\", pval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  count   No. Observations:                   39\n",
+      "Model:                            GLM   Df Residuals:                       33\n",
+      "Model Family:                 Poisson   Df Model:                            5\n",
+      "Link Function:                    Log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -1007.7\n",
+      "Date:                Mon, 10 Apr 2023   Deviance:                       1794.4\n",
+      "Time:                        21:39:49   Pearson chi2:                 1.67e+03\n",
+      "No. Iterations:                     9   Pseudo R-squ. (CS):              1.000\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=============================================================================================\n",
+      "                                coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------------------\n",
+      "Intercept                     0.6931      0.707      0.980      0.327      -0.693       2.079\n",
+      "offender_race[T.asian]       -0.6931      1.225     -0.566      0.571      -3.094       1.707\n",
+      "offender_race[T.black]        5.7064      0.707      8.069      0.000       4.320       7.093\n",
+      "offender_race[T.hispanic]     0.6190      0.734      0.844      0.399      -0.819       2.057\n",
+      "offender_race[T.unknown]      4.5992      0.707      6.501      0.000       3.213       5.986\n",
+      "offender_race[T.white]        2.3888      0.710      3.363      0.001       0.997       3.781\n",
+      "=============================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts_2 = df.groupby(\"offender_race\").charge_description.value_counts()\n",
+    "counts_2 = pd.DataFrame(counts_2)\n",
+    "counts_2 = counts_2.reset_index()\n",
+    "counts_2\n",
+    "model = sm.GLM.from_formula(\"count ~ offender_race\", family=sm.families.Poisson(), data=counts_2).fit()\n",
     "\n",
-    "# filter for statistically significant results\n",
-    "significant_results_df = results_df[results_df['p_adjusted'] < 0.05]\n",
-    "significant_results_df"
+    "# Print the model summary\n",
+    "print(model.summary())"
    ]
   }
  ],
